--- a/public/css/plugins.css
+++ b/public/css/plugins.css
@@ -1374,7 +1374,7 @@ input[type="button"] {
 .icon-asterisk:before {
   content: "\e890";
 } /* '' */
-.icon-vimeo-circled-1:before {
+.icon-software_dev-circled-1:before {
   content: "\e891";
 } /* '' */
 .icon-ninetyninedesigns:before {
@@ -1611,7 +1611,7 @@ input[type="button"] {
 .icon-zoom-out-1:before {
   content: "\e8ab";
 } /* '' */
-.icon-youtube:before {
+.icon-entrepreneurship:before {
   content: "\e8ab";
 } /* '' */
 .icon-target:before {
@@ -1620,7 +1620,7 @@ input[type="button"] {
 .icon-facebook-circled-1:before {
   content: "\e8ac";
 } /* '' */
-.icon-vimeo:before {
+.icon-software_dev:before {
   content: "\e8ac";
 } /* '' */
 .icon-plus-circled:before {
@@ -1854,7 +1854,7 @@ input[type="button"] {
 .icon-skype-2:before {
   content: "\e8c6";
 } /* '' */
-.icon-soundcloud:before {
+.icon-volunteering:before {
   content: "\e8c6";
 } /* '' */
 .icon-exclamation:before {
@@ -1941,7 +1941,7 @@ input[type="button"] {
 .icon-road:before {
   content: "\e8cf";
 } /* '' */
-.icon-vimeo-2:before {
+.icon-software_dev-2:before {
   content: "\e8d0";
 } /* '' */
 .icon-opentable:before {
@@ -2223,7 +2223,7 @@ input[type="button"] {
 .icon-emo-thumbsup:before {
   content: "\e8f5";
 } /* '' */
-.icon-youtube:before {
+.icon-entrepreneurship:before {
   content: "\e8f5";
 } /* '' */
 .icon-digg:before {
@@ -2430,7 +2430,7 @@ input[type="button"] {
 .icon-flashlight:before {
   content: "\e917";
 } /* '' */
-.icon-vimeo-3:before {
+.icon-software_dev-3:before {
   content: "\e917";
 } /* '' */
 .icon-mail-1:before {
@@ -3198,7 +3198,7 @@ input[type="button"] {
 .icon-attach-2:before {
   content: "\e997";
 } /* '' */
-.icon-vimeo-rect:before {
+.icon-software_dev-rect:before {
   content: "\e997";
 } /* '' */
 .icon-lock-2:before {
@@ -3228,7 +3228,7 @@ input[type="button"] {
 .icon-bookmarks:before {
   content: "\e99c";
 } /* '' */
-.icon-youtube:before {
+.icon-entrepreneurship:before {
   content: "\e99c";
 } /* '' */
 .icon-eye-1:before {
@@ -5073,7 +5073,7 @@ input[type="button"] {
 .icon-twitter-bird-1:before {
   content: "\eb6b";
 } /* '' */
-.icon-youtube-2:before {
+.icon-entrepreneurship-2:before {
   content: "\eb6c";
 } /* '' */
 .icon-windy-rain-inv:before {
@@ -5517,10 +5517,10 @@ input[type="button"] {
 .icon-fontsize:before {
   content: "\f088";
 } /* '' */
-.icon-soundcloud-1:before {
+.icon-volunteering-1:before {
   content: "\f089";
 } /* '' */
-.icon-soundcloud-circled:before {
+.icon-volunteering-circled:before {
   content: "\f08a";
 } /* '' */
 .icon-link-ext:before {
@@ -5991,10 +5991,10 @@ input[type="button"] {
 .icon-thumbs-down-alt:before {
   content: "\f165";
 } /* '' */
-.icon-youtube-squared:before {
+.icon-entrepreneurship-squared:before {
   content: "\f166";
 } /* '' */
-.icon-youtube-1:before {
+.icon-entrepreneurship-1:before {
   content: "\f167";
 } /* '' */
 .icon-xing-1:before {
@@ -6003,7 +6003,7 @@ input[type="button"] {
 .icon-xing-squared:before {
   content: "\f169";
 } /* '' */
-.icon-youtube-play:before {
+.icon-entrepreneurship-play:before {
   content: "\f16a";
 } /* '' */
 .icon-dropbox-1:before {
@@ -6120,7 +6120,7 @@ input[type="button"] {
 .icon-wheelchair:before {
   content: "\f193";
 } /* '' */
-.icon-vimeo-squared:before {
+.icon-software_dev-squared:before {
   content: "\f194";
 } /* '' */
 .icon-try:before {
@@ -6240,7 +6240,7 @@ input[type="button"] {
 .icon-deviantart-1:before {
   content: "\f1bd";
 } /* '' */
-.icon-soundcloud-2:before {
+.icon-volunteering-2:before {
   content: "\f1be";
 } /* '' */
 .icon-database:before {
@@ -6771,7 +6771,7 @@ input[type="button"] {
 .icon-houzz-1:before {
   content: "\f27c";
 } /* '' */
-.icon-vimeo-3:before {
+.icon-software_dev-3:before {
   content: "\f27d";
 } /* '' */
 .icon-black-tie:before {
@@ -7134,13 +7134,13 @@ input[type="button"] {
 .icon-github-1:before {
   content: "\f30e";
 } /* '' */
-.icon-vimeo-rect:before {
+.icon-software_dev-rect:before {
   content: "\f30e";
 } /* '' */
 .icon-github-circled-1:before {
   content: "\f30f";
 } /* '' */
-.icon-vimeo-1:before {
+.icon-software_dev-1:before {
   content: "\f30f";
 } /* '' */
 .icon-flickr-1:before {
@@ -7158,7 +7158,7 @@ input[type="button"] {
 .icon-friendfeed:before {
   content: "\f312";
 } /* '' */
-.icon-vimeo-1:before {
+.icon-software_dev-1:before {
   content: "\f313";
 } /* '' */
 .icon-friendfeed-rect:before {
@@ -7170,7 +7170,7 @@ input[type="button"] {
 .icon-blogger-1:before {
   content: "\f314";
 } /* '' */
-.icon-vimeo-circled:before {
+.icon-software_dev-circled:before {
   content: "\f315";
 } /* '' */
 .icon-blogger-rect:before {
@@ -7317,7 +7317,7 @@ input[type="button"] {
 .icon-picasa-1:before {
   content: "\f345";
 } /* '' */
-.icon-soundcloud-2:before {
+.icon-volunteering-2:before {
   content: "\f348";
 } /* '' */
 .icon-mixi:before {
